--- a/shop.html
+++ b/shop.html
@@ -107,7 +107,7 @@
                         </form>
                     </div>
                     <div class="col-md-2 d-lg-none">
-                        <a class="btn btn-outline" data-bs-toggle="offcanvas" href="#offcanvasCategory" role="button" aria-controls="offcanvasCategory"><i class="bx bx-filter"></i></a>
+                        <a class="btn btn-outline rounded-0 w-100" data-bs-toggle="offcanvas" href="#offcanvasCategory" role="button" aria-controls="offcanvasCategory"><i class="bx bx-slider-alt"></i> <span class="d-md-none">Фильтр</span></a>
                     </div>
                 </div>
                 <!-- Shop wrap -->
@@ -118,13 +118,13 @@
                     <!-- aside -->
                     <div class="col-lg-3">
                         <div class="bg-color-black h-100">
-                            <div class="offcanvas-lg offcanvas-start dark-mode bg-color-black color-white" tabindex="-1" id="offcanvasCategory" aria-labelledby="offcanvasCategoryLabel">
+                            <div class="offcanvas offcanvas-start offcanvas-collapse dark-mode bg-color-black color-white" tabindex="-1" id="offcanvasCategory" aria-labelledby="offcanvasCategoryLabel">
 
                                 <div class="offcanvas-header d-lg-none">
-                                    <p class="h2 offcanvas-title" id="offcanvasCategoryLabel">Фильтр</p>
+                                    <p class="h2 offcanvas-title" id="offcanvasCategoryLabel"><i class="bx bx-slider-alt"></i> Фильтр</p>
                                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                                 </div>
-                                <div class="offcanvas-body p-lg-4">
+                                <div class="offcanvas-body p-lg-3 p-xl-4">
                                     <form action="#">
                                         <div class="mb-4">
                                             <p class="h3 mb-3">CMS</p>
@@ -172,48 +172,48 @@
                                                 <label class="form-check-label" for="cat6">Транспорт/услуги</label>
                                             </div>
                                             <div class="form-check mb-2">
-                                                <input class="form-check-input" type="checkbox" value="" id="cat2">
-                                                <label class="form-check-label" for="cat2">Медицина</label>
+                                                <input class="form-check-input" type="checkbox" value="" id="cat7">
+                                                <label class="form-check-label" for="cat7">Медицина</label>
                                             </div>
                                             <div class="form-check mb-2">
-                                                <input class="form-check-input" type="checkbox" value="" id="cat2">
-                                                <label class="form-check-label" for="cat2">Еда и напитки/кафе и рестораны</label>
+                                                <input class="form-check-input" type="checkbox" value="" id="cat8">
+                                                <label class="form-check-label" for="cat8">Еда и напитки/кафе и рестораны</label>
                                             </div>
                                             <div class="form-check mb-2">
-                                                <input class="form-check-input" type="checkbox" value="" id="cat2">
-                                                <label class="form-check-label" for="cat2">Бытовые услуги/досуг</label>
+                                                <input class="form-check-input" type="checkbox" value="" id="cat9">
+                                                <label class="form-check-label" for="cat9">Бытовые услуги/досуг</label>
                                             </div>
                                             <div class="form-check mb-2">
-                                                <input class="form-check-input" type="checkbox" value="" id="cat2">
-                                                <label class="form-check-label" for="cat2">Строительство</label>
+                                                <input class="form-check-input" type="checkbox" value="" id="cat10">
+                                                <label class="form-check-label" for="cat10">Строительство</label>
                                             </div>
                                             <div class="form-check mb-2">
-                                                <input class="form-check-input" type="checkbox" value="" id="cat2">
-                                                <label class="form-check-label" for="cat2">Дом и офис</label>
+                                                <input class="form-check-input" type="checkbox" value="" id="cat11">
+                                                <label class="form-check-label" for="cat11">Дом и офис</label>
                                             </div>
                                             <div class="form-check mb-2">
-                                                <input class="form-check-input" type="checkbox" value="" id="cat2">
-                                                <label class="form-check-label" for="cat2">Животные</label>
+                                                <input class="form-check-input" type="checkbox" value="" id="cat12">
+                                                <label class="form-check-label" for="cat12">Животные</label>
                                             </div>
                                             <div class="form-check mb-2">
-                                                <input class="form-check-input" type="checkbox" value="" id="cat2">
-                                                <label class="form-check-label" for="cat2">Промышленность и оборудование</label>
+                                                <input class="form-check-input" type="checkbox" value="" id="cat13">
+                                                <label class="form-check-label" for="cat13">Промышленность и оборудование</label>
                                             </div>
                                             <div class="form-check mb-2">
-                                                <input class="form-check-input" type="checkbox" value="" id="cat2">
-                                                <label class="form-check-label" for="cat2">Мебель</label>
+                                                <input class="form-check-input" type="checkbox" value="" id="cat14">
+                                                <label class="form-check-label" for="cat14">Мебель</label>
                                             </div>
                                             <div class="form-check mb-2">
-                                                <input class="form-check-input" type="checkbox" value="" id="cat2">
-                                                <label class="form-check-label" for="cat2">Культура и искусство</label>
+                                                <input class="form-check-input" type="checkbox" value="" id="cat15">
+                                                <label class="form-check-label" for="cat15">Культура и искусство</label>
                                             </div>
                                             <div class="form-check mb-2">
-                                                <input class="form-check-input" type="checkbox" value="" id="cat2">
-                                                <label class="form-check-label" for="cat2">Одежда и обувь</label>
+                                                <input class="form-check-input" type="checkbox" value="" id="cat16">
+                                                <label class="form-check-label" for="cat16">Одежда и обувь</label>
                                             </div>
                                             <div class="form-check mb-2">
-                                                <input class="form-check-input" type="checkbox" value="" id="cat2">
-                                                <label class="form-check-label" for="cat2">Связь и СМИ</label>
+                                                <input class="form-check-input" type="checkbox" value="" id="cat17">
+                                                <label class="form-check-label" for="cat17">Связь и СМИ</label>
                                             </div>
                                         </div>
                                         <button type="submit" class="btn btn-primary w-100">Применить</button>
