--- a/index.html
+++ b/index.html
@@ -69,52 +69,9 @@
         <!-- HERO -->
         <section class="section overflow-hidden frontpage-hero">
             <div class="container">
-                <!-- <div class="row gy-0">
-                    <div class="col-lg-10">
-                        <span class="fz-15">Разработка сайтов</span>
-                        <h1 class="text-uppercase fw-bold">Разработка сайтов в Москве</h1>
-                        <div class="swiper heroSwiper mt-5">
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <a href="cases-item.html">
-                                        <img class="w-100" src="img/hero-slider-01.png" alt="">
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="cases-item.html">
-                                        <img class="w-100" src="img/hero-slider-02.png" alt="">
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="cases-item.html">
-                                        <img class="w-100" src="img/hero-slider-01.png" alt="">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="d-flex justify-content-end position-absolute bottom-0 end-0"
-                                style="z-index: 100;">
-                                <button type="button" class="btn btn-icon btn-prev rounded-circle" id="heroSwiper-prev">
-                                    <i class="bx bx-chevron-left"></i>
-                                </button>
-                                <button type="button" class="btn btn-icon btn-next rounded-circle" id="heroSwiper-next">
-                                    <i class="bx bx-chevron-right"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-2">
-                        <div class="d-flex flex-column justify-content-center align-items-center h-100 pt-4 pt-lg-0">
-                            <a class="btn btn-icon btn-primary btn-hero btn-lg rounded-circle" href="#mainForm" data-bs-toggle="modal"
-                                data-bs-target="#mainForm">написать</a>
-                            <div class="bg-btn-hero bg-color-black"></div>
-                        </div>
-                    </div>
-                </div> -->
-
                 <div class="row justify-content-center">
                     <div class="col-lg-10 text-center">
-                        <div class="mb-5">
-                            <!-- <span class="fz-15">Разработка сайтов</span> -->
+                        <div class="mb-4">
                             <h1 class="text-uppercase fw-bold mb-3">Разработка сайтов в Москве</h1>
                             <p class="fz-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque at nostrum voluptatum qui maiores placeat magni deserunt veniam laborum nesciunt sit corporis aut ut, excepturi eveniet assumenda dicta officia quo!</p>
                         </div>
@@ -123,11 +80,11 @@
                 </div>
             </div>
             <div class="container-fluid">
-                <div class="swiper heroSwiper">
+                <div class="swiper heroSwiper py-4">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <!-- Parallax gfx -->
-                            <a href="blog-item.html">
+                            <a href="cases-item.html">
                                 <div class="parallax">
                                     <div class="parallax-layer" data-depth="0.1" style="z-index: 2;">
                                         <img class="mx-auto" src="img/device-tablet-01.png" alt="tablet">
@@ -140,7 +97,7 @@
                         </div>
                         <div class="swiper-slide">
                             <!-- Parallax gfx -->
-                            <a href="blog-item.html">
+                            <a href="cases-item.html">
                                 <div class="parallax">
                                     <div class="parallax-layer" data-depth="0.1" style="z-index: 2;">
                                       <img class="mx-auto" src="img/device-tablet-01.png" alt="tablet">
@@ -153,7 +110,7 @@
                         </div>
                         <div class="swiper-slide">
                             <!-- Parallax gfx -->
-                            <a href="blog-item.html">
+                            <a href="cases-item.html">
                                 <div class="parallax">
                                     <div class="parallax-layer" data-depth="0.1" style="z-index: 2;">
                                       <img class="mx-auto" src="img/devices1.png" alt="tablet">
@@ -340,7 +297,7 @@
         </section>
 
         <!-- Цены на создание сайтов под ключ  -->
-        <section class="section py-5 dark-mode bg-color-black color-white bg-img"
+        <section class="section py-5 dark-mode bg-color-black color-white bg-img bg-top-auto bg-lg-center-cover"
             style="background-image: url(img/bg-price.png);">
             <div class="container">
                 <div class="row justify-content-center">
