--- a/shop-item.html
+++ b/shop-item.html
@@ -113,6 +113,122 @@
             </div>
         </section>
 
+        <section class="section py-5">
+            <div class="container">
+                <p class="h1 mb-4">Похожие решения</p>
+                <div class="swiper relatedProducts">
+                    <div class="swiper-wrapper py-3">
+                        <div class="swiper-slide h-auto p-3">
+                            <article class="card card-shop-item shadow h-100">
+                                <a class="hover-shine" href="shop-item.html">
+                                    <img class="card-img-top" src="img/shop-item-01.png" alt="">
+                                </a>
+                                <div class="card-body">
+                                    <p class="small mb-0">WordPress</p>
+                                    <p class="fz-15"><a class="text-decoration-none" href="shop-item.html">Интернет-магазин мебели</a></p>
+                                    <div class="d-flex justify-content-between py-3">
+                                        <p class="small">№123456</p>
+                                        <p class="small">6900 руб.</p>
+                                    </div>
+                                </div>
+                                <div class="card-footer">
+                                    <div class="row gy-2">
+                                        <div class="col-lg-12">
+                                            <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <a class="btn btn-outline w-100" href="#">Демо</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="swiper-slide h-auto p-3">
+                            <article class="card card-shop-item shadow h-100">
+                                <a class="hover-shine" href="shop-item.html">
+                                    <img class="card-img-top" src="img/shop-item-02.png" alt="">
+                                </a>
+                                <div class="card-body">
+                                    <p class="small mb-0">Bootstrap 5</p>
+                                    <p class="fz-15"><a class="text-decoration-none" href="shop-item.html">Интернет-магазин мебели</a></p>
+                                    <div class="d-flex justify-content-between py-3">
+                                        <p class="small">№123456</p>
+                                        <p class="small">6900 руб.</p>
+                                    </div>
+                                </div>
+                                <div class="card-footer">
+                                    <div class="row gy-2">
+                                        <div class="col-lg-12">
+                                            <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <a class="btn btn-outline w-100" href="#">Демо</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="swiper-slide h-auto p-3">
+                            <article class="card card-shop-item shadow h-100">
+                                <a class="hover-shine" href="shop-item.html">
+                                    <img class="card-img-top" src="img/shop-item-02.png" alt="">
+                                </a>
+                                <div class="card-body">
+                                    <p class="small mb-0">Bootstrap 5</p>
+                                    <p class="fz-15"><a class="text-decoration-none" href="shop-item.html">Интернет-магазин мебели</a></p>
+                                    <div class="d-flex justify-content-between py-3">
+                                        <p class="small">№123456</p>
+                                        <p class="small">6900 руб.</p>
+                                    </div>
+                                </div>
+                                <div class="card-footer">
+                                    <div class="row gy-2">
+                                        <div class="col-lg-12">
+                                            <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <a class="btn btn-outline w-100" href="#">Демо</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="swiper-slide h-auto p-3">
+                            <article class="card card-shop-item shadow h-100">
+                                <a class="hover-shine" href="shop-item.html">
+                                    <img class="card-img-top" src="img/shop-item-01.png" alt="">
+                                </a>
+                                <div class="card-body">
+                                    <p class="small mb-0">WordPress</p>
+                                    <p class="fz-15"><a class="text-decoration-none" href="shop-item.html">Интернет-магазин мебели</a></p>
+                                    <div class="d-flex justify-content-between py-3">
+                                        <p class="small">№123456</p>
+                                        <p class="small">6900 руб.</p>
+                                    </div>
+                                </div>
+                                <div class="card-footer">
+                                    <div class="row gy-2">
+                                        <div class="col-lg-12">
+                                            <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <a class="btn btn-outline w-100" href="#">Демо</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-icon btn-prev rounded-circle" id="relatedProducts-prev">
+                        <i class="bx bx-chevron-left"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon btn-next rounded-circle" id="relatedProducts-next">
+                        <i class="bx bx-chevron-right"></i>
+                    </button>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!-- Футер -->
