--- a/cases-item.html
+++ b/cases-item.html
@@ -90,7 +90,7 @@
                             </div>
                             <p class="fz-15">Что было сделано:</p>
                             <div class="fw-light">
-                                <p>- Был выбран шаблон <a href="#">№3445667</a> и заполнен по желанию заказчика в соответствии с  тематикой</p>
+                                <p>- Был выбран шаблон <a href="shop-item.html">№3445667</a> и заполнен по желанию заказчика в соответствии с  тематикой</p>
                                 <p>- Реализована заявочная система товаров. которая на этапе приёма заявки позволяет продавцу узнать какой конкретно товар хочет получить клиент и это без дополнительных действий от клиента. только номер телефона и имя</p>
                                 <p>- Проведена техническая подготовка шаблона под дальнейшее SEO продвижение</p>
                                 <p>- Оптимизировали работу сайта и сократили время  загрузки в половину, что в свою очередь улучшило пользовательский опыт клиентов и избежали уход клиента до загрузки страницы</p>
@@ -141,8 +141,8 @@
             <div class="row py-3 py-lg-3">
                 <div class="col">
                     <ul class="nav justify-content-center justify-content-lg-end">
-                        <li class="ms-3"><a class="hover-opacity" href="#"><img src="img/WhatsApp.svg" alt=""></a></li>
-                        <li class="ms-3"><a class="hover-opacity" href="#"><img src="img/Telegram.svg" alt=""></a></li>
+                        <li class="mx-2"><a class="hover-opacity" href="#"><img src="img/WhatsApp.svg" alt=""></a></li>
+                        <li class="mx-2"><a class="hover-opacity" href="#"><img src="img/Telegram.svg" alt=""></a></li>
                     </ul>
                 </div>
             </div>
