--- a/index.html
+++ b/index.html
@@ -574,8 +574,8 @@
             <div class="row py-3 py-lg-3">
                 <div class="col">
                     <ul class="nav justify-content-center justify-content-lg-end">
-                        <li class="ms-3"><a class="hover-opacity" href="#"><img src="img/WhatsApp.svg" alt=""></a></li>
-                        <li class="ms-3"><a class="hover-opacity" href="#"><img src="img/Telegram.svg" alt=""></a></li>
+                        <li class="mx-2"><a class="hover-opacity" href="#"><img src="img/WhatsApp.svg" alt=""></a></li>
+                        <li class="mx-2"><a class="hover-opacity" href="#"><img src="img/Telegram.svg" alt=""></a></li>
                     </ul>
                 </div>
             </div>
