--- a/about.html
+++ b/about.html
@@ -276,7 +276,7 @@
         <section class="section py-5 pb-7 dark-mode bg-color-black color-white">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-12 text-center">
+                    <div class="col-12 text-lg-center">
                         <p class="fz-15 fw-light mb-0">Есть мнение</p>
                         <p class="h1 fw-bold mb-7">Нас описывают как профессиональную команду</p>
                     </div>
@@ -356,8 +356,8 @@
             <div class="row py-3 py-lg-3">
                 <div class="col">
                     <ul class="nav justify-content-center justify-content-lg-end">
-                        <li class="ms-3"><a class="hover-opacity" href="#"><img src="img/WhatsApp.svg" alt=""></a></li>
-                        <li class="ms-3"><a class="hover-opacity" href="#"><img src="img/Telegram.svg" alt=""></a></li>
+                        <li class="mx-2"><a class="hover-opacity" href="#"><img src="img/WhatsApp.svg" alt=""></a></li>
+                        <li class="mx-2"><a class="hover-opacity" href="#"><img src="img/Telegram.svg" alt=""></a></li>
                     </ul>
                 </div>
             </div>
