--- a/promotion.html
+++ b/promotion.html
@@ -83,7 +83,7 @@
                 <div class="mb-5">
                     <h1 class="text-uppercase fw-bold">Акции</h1>
                 </div>
-                <div class="row gy-4 justify-content-center">
+                <div class="row gy-4 gy-lg-5">
                     <!-- item -->
                     <div class="col-lg-8">
                         <article class="card card-promotion h-100">
